feat: added more configuration on File Utils (CSV, JSON, YAML)